<resources>
    <string name="app_name">myHealth</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">DCNT</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_lbl_new_user">New here? Then</string>
    <string name="activity_btn_login">Log In</string>
    <string name="activity_btn_signup">Sign Up</string>
    <string name="hint_error_invalid_email">This email address is invalid</string>
    <string name="hint_error_password_too_short">This password is too short</string>
    <string name="hint_error_incorrect_password">This password is incorrect</string>
    <string name="hint_error_field_required">This field is required</string>
    <string name="activity_btn_back">Voltar</string>
    <string name="activity_btn_next">Próximo</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="lbl_every_day">every day</string>
    <string name="lbl_friday">friday</string>
    <string name="lbl_monday">monday</string>
    <string name="lbl_saturday">saturday</string>
    <string name="lbl_sunday">sunday</string>
    <string name="lbl_thursday">thursday</string>
    <string name="lbl_tuesday">tuesday</string>
    <string name="lbl_wednesday">wednesday</string>
    <string name="dialog_lbl_registering">Registering…</string>
    <string name="dialog_error_existing_sus">SUS number is already registered</string>
    <string name="dialog_btn_try_again">Try again</string>
    <string name="dialog_lbl_entering">Entering…</string>
    <string name="dialog_lbl_firstuse">Saving in local…</string>
    <string name="dialog_error_existing_email">Email already registered</string>
    <string name="dialog_error_wrong_password">Password incorrect</string>
    <string name="dialog_error_email_not_registered">Email not registered</string>
    <string name="settings_item_days">days</string>
    <string name="settings_item_weeks">weeks</string>
    <string name="register_lbl_access_data">Access Data</string>
    <string name="register_lbl_personal_data">Personal Data</string>
    <string name="register_lbl_address">Address</string>
    <string name="register_lbl_register_success">Register successfully</string>
    <string name="register_lbl_health_info">Health Information</string>
    <string name="register_lbl_monitoring_hypertension">Monitoring - Hypertension</string>
    <string name="register_lbl_monitoring_coronary">Monitoring - Coronary Disease</string>
    <string name="register_lbl_monitoring_diabetes">Monitoring - Diabetes</string>
    <string name="register_lbl_monitoring_obesity">Monitoring - Obesity</string>
    <string name="register_lbl_settings_success">Settings monitoring registered</string>
    <string name="register_hint_sus_number">SUS Number</string>
    <string name="register_hint_password_confirm">Confirm password</string>
    <string name="register_hint_postcode">Postcode</string>
    <string name="register_hint_thoroughfare">Thoroughfare</string>
    <string name="register_hint_number">Number</string>
    <string name="register_hint_complement">Complement</string>
    <string name="register_hint_neighborhood">Neighborhood</string>
    <string name="register_hint_city">City</string>
    <string name="register_hint_state">State</string>
    <string name="register_lbl_diseases_choose">Check the diseases that will be monitored:</string>
    <string name="register_lbl_disease_hypertension">Arterial Hypertension</string>
    <string name="register_lbl_disease_coronary">Arterial Coronary Disease</string>
    <string name="register_lbl_disease_diabetes">Diabetes</string>
    <string name="register_lbl_disease_obesity">Obesity</string>
    <string name="register_lbl_frequency_define">Which days will the collection be performed?</string>
    <string name="register_lbl_every_day">Every day</string>
    <string name="register_lbl_every_week">Every week</string>
    <string name="register_lbl_custom">Custom</string>
    <string name="register_lbl_collect_custom">Collect every:</string>
    <string name="register_lbl_days_of_week">Days of week</string>
    <string name="register_lbl_times_a_day">How many times a day?</string>
    <string name="register_lbl_short_sunday">S</string>
    <string name="register_lbl_short_monday">M</string>
    <string name="register_lbl_short_tuesday">T</string>
    <string name="register_lbl_short_wednesday">W</string>
    <string name="register_lbl_short_thursday">T</string>
    <string name="register_lbl_short_friday">F</string>
    <string name="register_lbl_short_saturday">S</string>
    <string name="register_hint_name">Full name</string>
    <string name="register_hint_date_of_birth">Date of birth</string>
    <string name="register_hint_mothers_name">Mother\'s name</string>
    <string name="register_hint_place_of_birth">Place of birth</string>
    <string name="register_hint_gender">Gender</string>
    <string name="register_lbl_male">Male</string>
    <string name="register_lbl_female">Female</string>


    <string name="collect_data_observation">Observation</string>

    <string name="collect_data_cadiac_systolic">Systolic pressure</string>
    <string name="collect_data_cadiac_diastolic">Diastolic pressure</string>
    <string name="collect_data_cadiac_heart_beats">Heart beats</string>
    <string name="collect_data_cadiac_weight">Weight</string>


    <string name="collect_data_glycemic_glycemic">Glycemic rate</string>

    <string name="collect_data_obesity_weight">Weight</string>
    <string name="collect_data_obesity_bodyfat">Body Fat</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Paciente</string>
    <string name="nav_header_subtitle">usuario@exemplo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="fab_item_hypertension">Hypertension</string>
    <string name="fab_item_diabetes">Diabetes</string>
    <string name="fab_item_obesity">Obesity</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_exit">Exit</string>


    <string name="list_register_title">History of Data Collection</string>
    <string name="dialog_error_no_connection">Unable to connect to server</string>
    <string name="hint_error_invalid_password">The password is invalid</string>
    <string name="menu_access_code">Access Code</string>
    <string name="access_code_title">Access Code</string>
    <string name="access_code_description">Please provide this code to your healthcare provider.</string>
    <string name="msg_synchronized">Data collected successfully synchronized</string>
    <string name="msg_register_sucessfull">Register sucessfull</string>

    <string name="hint_error_invalid_password_confirmation">Your password and confirmation password do not match.</string>
    <string name="hint_error_invalid_cns">SUS number is invalid</string>

</resources>
