<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_access_code"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_access_code" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

    </group>


</menu>
