<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HealthDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/register_lbl_diseases_choose"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chk_hypertension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/register_lbl_disease_hypertension" />

        <CheckBox
            android:id="@+id/chk_coronary_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/register_lbl_disease_coronary" />

        <CheckBox
            android:id="@+id/chk_diabetes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/register_lbl_disease_diabetes" />

        <CheckBox
            android:id="@+id/chk_obesity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_lbl_disease_obesity" />
    </LinearLayout>

</ScrollView>