<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity"
    android:gravity="center"
    style="@style/Theme.AppCompat.NoActionBar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_title_to_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:textSize="40sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_email"
            style="@style/AppTheme.EditTextWithBorder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_txt_lg"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_title_to_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_password"
            style="@style/AppTheme.EditTextWithBorder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_edit_txt_lg"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signin_action"
        android:layout_width="@dimen/width_btn_lg"
        android:layout_height="@dimen/height_btn_md"
        android:text="@string/activity_btn_login"
        android:layout_gravity="center_horizontal"
        style="@style/AppTheme.RoundedCornerMaterialButton" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_title_to_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_lbl_new_user"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/signup_action"
            style="@style/AppTheme.RoundedCornerMaterialButtonBorder"
            android:layout_width="@dimen/width_btn_md"
            android:layout_height="@dimen/height_btn_sm"
            android:text="@string/activity_btn_signup" />

    </LinearLayout>

</LinearLayout>