<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddressFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_postcode"
                style="@style/AppTheme.EditTextWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/register_hint_postcode"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_thoroughfare"
                style="@style/AppTheme.EditTextWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/register_hint_thoroughfare"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_number"
                    style="@style/AppTheme.EditTextWithBorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/register_hint_number"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/txt_complement"
                    style="@style/AppTheme.EditTextWithBorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/register_hint_complement"
                    android:inputType="text"
                    android:textFontWeight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_neighborhood"
                style="@style/AppTheme.EditTextWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/register_hint_neighborhood"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_city"
                style="@style/AppTheme.EditTextWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/register_hint_city"
                android:inputType="text" />

            <EditText
                android:id="@+id/txt_state"
                style="@style/AppTheme.EditTextWithBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/register_hint_state"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>